--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1>Healthcare Data Analysis</h1>
 <div>
 <label for="name">Name:</label>
-<input type="text" id="name">
+<input type="text" id="name"  required >
 </div>
 <div>
 <label>Gender:</label>
@@ -32,7 +32,7 @@
 </div>
 <div>
 <label for="age">Age:</label>
-<input type="number" id="age">
+<input type="number" id="age"  required>
 </div>
 <div>
 <label for="condition">Condition:</label>
